--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=FastTrig
-version=0.1.3
+version=0.1.4
 author=Rob Tillaart <rob.tillaart@gmail.com><pete.thompson@yahoo.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
 sentence=Arduino library with interpolated lookup for sin() and cos()
-paragraph=Trades speed for accuracy.  
+paragraph=Trades speed for accuracy. Check readme for details.
 category=Data Processing
 url=https://github.com/RobTillaart/FastTrig
 architectures=*
