add isincos() + int math only functions (#23)
* add isincos() + int math only functions

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=FastTrig
-version=0.2.1
-author=Rob Tillaart <rob.tillaart@gmail.com><pete.thompson@yahoo.com>
+version=0.3.0
+author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
-sentence=Arduino library with interpolated lookup for sin() and cos()
-paragraph=Trades speed for accuracy. Check readme for details.
+sentence=Arduino library with interpolated lookup for sin(), cos(), tan(), atan2() and more.
+paragraph=Trades speed for accuracy. Check readme.md for details.
 category=Data Processing
 url=https://github.com/RobTillaart/FastTrig
 architectures=*
